fixed logo clipping issues on mobile

--- a/style.css
+++ b/style.css
@@ -97,6 +97,16 @@ header h1, header h3{
 }
 
 @media (max-width: 800px) {
+    header h1 {
+        position: absolute;
+        top: 5px;
+        font-size: 1.3em;
+    }
+
+    header h3 {
+        visibility: hidden;
+    }
+
     .post {
         width: 90vw;
     }
